[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/objects/components/popups/visualizer_data_container.gd" type="Script" id=1]
[ext_resource path="res://resources/godot/popup_theme.tres" type="Theme" id=2]
[ext_resource path="res://resources/fonts/libre-baskerville/LibreBaskerville-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://resources/fonts/libre-baskerville/LibreBaskerville-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://resources/textures/visualizer_images/default.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=2]
resource_local_to_scene = true
bg_color = Color( 0.27451, 0.258824, 0.368627, 1 )

[sub_resource type="DynamicFont" id=1]
size = 18
outline_color = Color( 1, 0.933333, 0.8, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 0.690196, 0.639216, 1 )

[node name="VisualizerDataContainer" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -702.0
margin_bottom = -408.0
rect_min_size = Vector2( 400, 0 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 400.0
margin_bottom = 138.0
custom_constants/separation = 0

[node name="TextContainer" type="PanelContainer" parent="HBoxContainer"]
margin_right = 267.0
margin_bottom = 138.0
mouse_filter = 2
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/TextContainer"]
margin_right = 267.0
margin_bottom = 138.0
size_flags_horizontal = 3

[node name="Title" type="Label" parent="HBoxContainer/TextContainer/VBoxContainer"]
margin_right = 267.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 1 )
text = "Title"
align = 1
autowrap = true

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/TextContainer/VBoxContainer"]
margin_top = 27.0
margin_right = 267.0
margin_bottom = 138.0
size_flags_vertical = 3
custom_constants/margin_right = 7
custom_constants/margin_top = 4
custom_constants/margin_left = 7
custom_constants/margin_bottom = 7

[node name="Desc" type="RichTextLabel" parent="HBoxContainer/TextContainer/VBoxContainer/MarginContainer"]
margin_left = 7.0
margin_top = 4.0
margin_right = 260.0
margin_bottom = 104.0
custom_colors/default_color = Color( 0.27451, 0.258824, 0.368627, 1 )
custom_fonts/normal_font = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "Description"
text = "Description"

[node name="ImageContainer" type="PanelContainer" parent="HBoxContainer"]
margin_left = 267.0
margin_right = 400.0
margin_bottom = 138.0
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/panel = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/ImageContainer"]
margin_right = 133.0
margin_bottom = 138.0
mouse_filter = 2
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_bottom = 5

[node name="Image" type="TextureRect" parent="HBoxContainer/ImageContainer/MarginContainer"]
margin_top = 5.0
margin_right = 128.0
margin_bottom = 133.0
rect_min_size = Vector2( 128, 128 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 7

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse" binds= [ true ]]
[connection signal="mouse_exited" from="." to="." method="_on_mouse" binds= [ false ]]
